--- a/index.html
+++ b/index.html
@@ -46,6 +46,38 @@
       </div>
     </article>
 
+    <article class="dadosIene">
+      <div class="grafico">
+        <div class="grafico__titulo">
+          <span class="grafico__ilustracao-iene"></span>
+          <h2>Variação da moeda desde o login</h2>
+        </div>
+        <canvas id="graficoIene"></canvas>
+      </div>
+
+      <div class="investimentos">
+        <h2>Valores da moeda</h2>
+        <ul class="investimentos__lista" id="iene" data-lista>
+        </ul>
+      </div>
+    </article>
+
+    <article class="dadosLibra">
+      <div class="grafico">
+        <div class="grafico__titulo">
+          <span class="grafico__ilustracao-libra"></span>
+          <h2>Variação da moeda desde o login</h2>
+        </div>
+        <canvas id="graficoLibra"></canvas>
+      </div>
+
+      <div class="investimentos">
+        <h2>Valores da moeda</h2>
+        <ul class="investimentos__lista" id="libra" data-lista>
+        </ul>
+      </div>
+    </article>
+
     <footer class="rodape">
       <p>Dashboard - Desenvolvido por Alura</p>
     </footer>
